# University

./: .gitignore  README.md  \
Data structures and algorithms (DSA)/DataStructures/Stack/: Stack.h
Data structures and algorithms (DSA)/Homework1/Catch2/: catch.hpp
Data structures and algorithms (DSA)/Homework1/Headers/: MyStore.h  Node.hpp
Data structures and algorithms (DSA)/Homework1/Source/: ClientWrapper.cpp  tests.cpp
Data structures and algorithms (DSA)/Homework2/Headers/: interface.h
Data structures and algorithms (DSA)/Homework3/: homework3.sln
Data structures and algorithms (DSA)/Homework3/homework3/: HashTable.cpp  HashTable.h  homework3.cpp  homework3.vcxproj  homework3.vcxproj.filters  interface.cpp  interface.h
Data structures and algorithms (DSA)/Homework3/homework_tests/: catch.hpp  homework_tests.vcxproj  homework_tests.vcxproj.filters  tests.cpp  tests_main.cpp
Data structures and algorithms (DSA)/Lempel-Ziv-Welch-(LZW Compression)/: CMakeLists.txt
Data structures and algorithms (DSA)/Lempel-Ziv-Welch-(LZW Compression)/Lempel-Ziv-Welch-(LZW Compression)/: CMakeLists.txt
Data structures and algorithms (DSA)/Lempel-Ziv-Welch-(LZW Compression)/Lempel-Ziv-Welch-(LZW Compression)/Headers/: Archiver.h  Lempel-Ziv-Welch-(LZW Compression).h
Data structures and algorithms (DSA)/Lempel-Ziv-Welch-(LZW Compression)/Lempel-Ziv-Welch-(LZW Compression)/Source/: Lempel-Ziv-Welch-(LZW Compression).cpp
Data structures and algorithms (DSA)/Lempel-Ziv-Welch-(LZW Compression)/Lempel-Ziv-Welch-(LZW Compression)/Sources/: Lempel-Ziv-Welch-(LZW Compression).cpp
Data structures and algorithms/DataStructures/: main.cpp
Data structures and algorithms/DataStructures/DynamicArray/: DynamicArray.h
Data structures and algorithms/DynamicArray/: DynamicArray.cpp  DynamicArray.h  main.cpp
Data structures and algorithms/Homework1/: CMakeLists.txt
Data structures and algorithms/Homework1/Headers/: ClientWrapper.h  Header.h  Linked_List.hpp  MyStore.h  Node.h  Utils.h  linked_list.hpp
Data structures and algorithms/Homework1/Interfaces/: interface.h
Data structures and algorithms/Homework1/Source/: ClientWrapper.cpp  ConsoleInput.cpp  MyStore.cpp  Utils.cpp  tests.cpp
Design and analysis of algorithms (DAA)/: summer2011.cpp
Design and analysis of algorithms (DAA)/Tasks/: hw1.cpp
Differential equations project/: 45799_TH.tex  Task1_45799.asv  Task1_45799.m
Hackerrank/: LargestRectangleStack.cpp
Hackerrank/Hard/: PoisonousPlants.cpp
Hackerrank/Medium/: BalancedBrackets.cpp  LargestRectangleBruteForce.cpp
Intro to Go/: Filter.go
Intro to Go/Homework/: Filter.go  MapReducer.go  Mapper.go  Reducer.go
Introduction to Go/IntroToGo/: commands.go  main.go  music.go  stats.go  utils.go
Introduction-to-Go/: README.md
Introduction-to-Go/Homework/: MapReducer.go
Introduction-to-Go/IntroToGo/: README.md  commands.go  main.go  music.go  utils.go
Logical programming (LP)/Prolog/: must_use_tips.pl
OOP/Hw1/: main.cpp
OOP/Hw1/MyString/: MyString.cpp  (+2 more)
OOP/Practice/16.03/Wallet task/: CMakeLists.txt
OOP/Practice/16.03/Wallet task/Card/: CardTests.cpp
OOP/Practice/16.03/Wallet task/VirtualWallet/: VirtualWalletTests.cpp
OOP/Practice/23.03/: CMakeLists.txt  main.cpp
OOP/Practice/23.03/Company/: CompanyTests.cpp
OOP/Practice/23.03/Employee/: Employee.cpp  EmployeeTests.cpp
Object Oriented programming (OOP)/Hw 2/: Person.cpp  Person.h  PersonTest.cpp  Vehicle.cpp  Vehicle.h  output
Object Oriented programming (OOP)/Hw1/: CMakeLists.txt
Object Oriented programming/Course project/: CMakeLists.txt  main.cpp
Object Oriented programming/Hw 2/: CMakeLists.txt  CommandInterpeter.h  CommandInterpreter.cpp  InterpreterTests.cpp  Person.cpp  Person.h  PersonTest.cpp  Registration.cpp  Registration.h  RegistrationTest.cpp  Vehicle.cpp  Vehicle.h  a.out  main.cpp
Object Oriented programming/Hw1/: CMakeLists.txt  main.cpp
Object Oriented programming/Hw1/Garage/: Garage.cpp  Garage.hpp  GarageTests.cpp
Object Oriented programming/Hw1/MyString/: MyString.cpp  MyString.hpp  MyStringTests.cpp
Object Oriented programming/Hw1/Vehicle/: Vehicle.cpp  Vehicle.hpp  VehicleTests.cpp
Object Oriented programming/Hw1/VehicleAllocator/: VehicleAllocator.cpp  VehicleAllocator.hpp
(+62 files in other folders)
