# CMakeList.txt : CMake project for Lempel-Ziv-Welch-(LZW Compression), include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ConsoleApp 
"Sources/Lempel-Ziv-Welch-(LZW Compression).cpp"
"Headers/Lempel-Ziv-Welch-(LZW Compression).h")

# TODO: Add tests and install targets if needed.
